# Nastroje-pro-vyvoj-software

./: README.md
02-git/: reseni.txt  zadani.txt
03-make/zadani/: Makefile  zadani.txt
03-make/zadani/mydb/src/: Makefile
05-build/: CMakeLists.txt  zadani.txt
05-build/mydb/src/: CMakeLists.txt
07-debug/: zadani.txt
08-testing-zadani/: zadani.txt
09-doxygen-zadani/: zadani.txt
100-DOKS-Kubernetes/: README.md  app-swimmpair-prod.yaml  docu-swimmpair.yaml  kubernetes-ingress-config.yaml
100-DOKS-Kubernetes/mysql-deployment/: 0-mysql-secret.yaml
